--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -35,6 +35,12 @@ jobs:
         with:
           cmd: install
           dir: ./
+
+      - name: Build
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: build
+          dir: .
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
